--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "express": "^4.18.1",
     "uuid": "^8.3.2"
   },
-  "name": "mobsterrpg",
+  "name": "radio-follower",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/bergboom/mobsterRpg.git",
+  "repository": "https://github.com/bergboom/radio-follower.git",
   "author": "bergboom <erik.bergbom@sogeti.se>",
   "license": "MIT",
   "devDependencies": {
