--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@google-cloud/datastore": "^7.0.0",
+    "@google-cloud/dialogflow": "^5.4.0",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "uuid": "^8.3.2"
@@ -19,7 +20,7 @@
   "author": "bergboom <erik.bergbom@sogeti.se>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^8.17.0",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "eslint": "^8.17.0"
   }
 }
