--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@google-cloud/datastore": "^7.0.0",
     "@google-cloud/dialogflow": "^5.4.0",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "uuid": "^8.3.2"
   },
